tests/fixtures/LatestTests/VariableDeclarationTests/errors/assignment_type_mismatch_str_to_int.fg
/; EXPECT_ERROR: AssignmentExpressionTypeMismatch
var x:int = 10
x = "Hello"

